# external-pod-autoscaler

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cluster.yaml  external-pod-autoscaler-0.1.6.tgz  external-pod-autoscaler-0.1.7.tgz  external-pod-autoscaler-0.1.8.tgz  index.yaml
.github/workflows/: bump.yaml  ci.yaml  main.yaml  release.yaml
charts/external-pod-autoscaler/: Chart.yaml  values.localdev.yaml  values.yaml
charts/external-pod-autoscaler/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhooks.yaml
config/epa/base/: deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
config/epa/overlays/dev/: deployment.yaml  kustomization.yaml
docs/: distributed-scraping-design.md  lease-membership.md  metrics.md
examples/: dummy-metrics.yaml  epa.yaml
examples/dummy-metrics/: Cargo.toml  Dockerfile  README.md
examples/dummy-metrics/src/: main.rs
src/: lib.rs  main.rs
src/apis/: mod.rs
src/apis/ctx.sh/v1beta1/: externalpodautoscaler.rs  metric.rs  metrics_test.rs  mod.rs
src/controller/: membership.rs  membership_test.rs  mod.rs  run.rs  run_test.rs  work_assigner.rs  work_assigner_test.rs
src/controller/externalpodautoscaler/: controller.rs  controller_test.rs  mod.rs  observer.rs  observer_test.rs  reconcile.rs  telemetry.rs
src/controller/metric/: controller.rs  error.rs  mod.rs
src/membership/: manager.rs  manager_test.rs  mod.rs  ownership.rs  ownership_test.rs
src/scraper/: mod.rs  parser.rs  parser_test.rs  pod_cache.rs  pod_cache_test.rs  scheduler.rs  scraper_integration_test.rs  service.rs  telemetry.rs  worker.rs  worker_test.rs
src/store/: mod.rs  ops.rs  ops_test.rs  types.rs  window.rs  window_test.rs
src/webhook/: admission.rs  admission_test.rs  aggregation.rs  handlers.rs  handlers_test.rs  mod.rs  server.rs  types.rs
src/webhook/admission/: handlers.rs  handlers_test.rs  mod.rs
src/webhook/metrics/: aggregation.rs  aggregation_test.rs  handlers.rs  mod.rs  telemetry.rs  types.rs
tests/fixtures/: daemonset-agent.yaml  deployment-queue-service.yaml  deployment-worker.yaml  epa-basic.yaml  epa-deleting.yaml  epa-multi-metric.yaml  epa-self-scaling.yaml  hpa-basic.yaml  hpa-stale.yaml  hpa-stub.yaml  lease-expired.yaml  lease-valid.yaml  pod-not-ready.yaml  pod-ready.yaml  statefulset-cache.yaml
