[package]
name = "external-metrics-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
backon = "=1.5.0"
home = "=0.5.11"
k8s-openapi = { version = "0.25", features = ["v1_31"] }
kube = { version = "1.1", features = ["derive"] }
kube-runtime = { version = "1.1", features = ["unstable-runtime-stream-control"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.48", features = ["full"]}
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
thiserror = "2.0"
futures = "0.3"
rustls = "0.23"
