[package]
name = "external-pod-autoscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kubernetes client
kube = { version = "1.1", features = ["runtime", "derive", "client", "rustls-tls"] }
kube-runtime = { version = "1.1", features = ["unstable-runtime-stream-control"] }
k8s-openapi = { version = "0.25", features = ["v1_30"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
base64 = "0.22"
json-patch = "2.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Web server
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = "0.4"
humantime = "2.1"

# Concurrent collections
dashmap = "6.0"


[dev-dependencies]
kube-fake-client = "0.1"
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"
http = "1"
serial_test = "3"
serde_yaml = "0.9"
