[package]
name = "external-pod-autoscaler"
version = "0.1.2"
edition = "2024"

[dependencies]
# Kubernetes client
kube = { version = "3.0", features = ["runtime", "derive", "client", "rustls-tls"] }
kube-runtime = { version = "3.0", features = ["unstable-runtime-stream-control"] }
k8s-openapi = { version = "0.27", features = ["v1_33"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-channel = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
base64 = "0.22"
json-patch = "4.0"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Web server
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
humantime = "2.1"

# Concurrent collections
dashmap = "6.0"
fnv = "1.0"


[dev-dependencies]
tokio = { version = "1.32", features = ["test-util"] }
kube-fake-client = { version = "0.2.1", default-features = false, features = ["v1_33"] }
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http = "1"
serial_test = "3"
serde_yaml = "0.9"
